added initial bin management

--- a/cgi-bin/config
+++ b/cgi-bin/config
@@ -1,40 +1,2 @@
-pretty things
-/var/esp/pretty-things
-test database
-/var/esp/test-database
 play
-/var/esp/play
-play
-/var/esp/play
-play
-/var/esp/play
-play
-/var/esp/play
-play
-/var/esp/play
-play
-/var/esp/play
-play
-/var/esp/play
-play
-/var/esp/play
-play
-/var/esp/play
-play
-/var/esp/play
-play
-/var/esp/play
-play
-/var/esp/play
-play
-/var/esp/play
-play
-/var/esp/play
-/var/esp/play
-play
-play
-/var/esp/play
-play
-/var/esp/play
-play
-/var/esp/play
+/home/lgiles/esp-db/play
