callback via index page working for location

--- a/cgi-bin/config
+++ b/cgi-bin/config
@@ -1,2 +1,18 @@
 play
 /home/lgiles/esp-db/play
+play2
+/home/lgiles/esp-db/play2
+play2
+/home/lgiles/esp-db/play2
+play2
+/home/lgiles/esp-db/play2
+play2
+/home/lgiles/esp-db/play2
+play2
+/home/lgiles/esp-db/play2
+play2
+/home/lgiles/esp-db/play2
+play
+/home/lgiles/esp-db/play
+play
+/home/lgiles/esp-db/play
